boreal/tests/assets/invalid_files/parsing/xor_invalid_value2.yar
rule a {
    strings:
        $a = "a" xor(300-301)
    condition:
        $a
}
